Added photo upload and sticker upload feature

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -66,6 +66,9 @@ body {
     margin-top: 28px;
   }
 }
+.main-container {
+  border-right: 1px solid #A5A5A5;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
