--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -69,7 +69,29 @@ body {
 .main-container {
   border-right: 1px solid #A5A5A5;
 }
-
+.sticker-modal {
+  display:none;
+  position: fixed;
+  width:100%;
+  height:100%;
+  background: rgba(50,50,50,0.6);
+  z-index:200;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  cursor: pointer;
+}
+.modal-body {
+  margin: 0 auto;
+  width: 500px;
+  height: 200px;
+  opacity: 1;
+  background: #ffffff;
+  border: 1px solid #333;
+  top: 10%;
+  cursor: default;
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
