Added warning for local storage limits

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -72,6 +72,9 @@ body {
 input[type="file"].photo-upload, input[type="file"].sticker-upload {
   display: none;
 }
+.sticker-name-cont {
+  display: none;
+}
 .error-name, .error-file {
   display: none;
 }
