--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,10 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+/* helper classes */
+.show {
+  display: block;
+}
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -15,6 +19,9 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  font-family: "Open Sans", Helvetica, "Times New Roman", serif;
+  background-color: #444851;
+  color: #ffffff;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -49,76 +56,82 @@ body {
   margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+.main-container {
+  padding-bottom: 20px;
+  .photo-controls-container {
+    margin-bottom: 30px;
+  }
+  .img-container {
+    padding-right: 10px;
+    text-align: center;
+    .canvas-area {
+      width: auto;
+      height: auto;
+      background: #ccc;
+      position: relative;
+      overflow: hidden;
+      border: 10px solid #fafafa;
+      border-radius: 5px;
+      display: none;
+      .main-image {
+        max-width: 100%;
+      }
+      .dropped-sticker {
+        position: absolute;
+        width: 150px;
+        height: 150px;
+        z-index: 0;
+      }
+    }
   }
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-  p + h4 {
-    margin-top: 28px;
+.sticker-lib {
+  padding-bottom: 20px;
+  border-left: 1px solid #A5A5A5;
+  h3 {
+    margin-bottom: 20px;
   }
-}
-.main-container {
-  border-right: 1px solid #A5A5A5;
-}
-input[type="file"].photo-upload, input[type="file"].sticker-upload {
-  display: none;
-}
-.sticker-name-cont {
-  display: none;
-}
-.error-name, .error-file {
-  display: none;
-}
-.canvas-area {
-  display: inline-block;
-  width: auto;
-  height: auto;
-  background: #ccc;
-  position: relative;
-  overflow: hidden;
-}
-.dropped-sticker {
-  position: absolute;
-  width: 150px;
-  height: 150px;
-  z-index: 0
-}
-.main-image {
-  max-width: 100%;
-}
-.sticker-template, .main-image-template, .sticker-img-template, .photo-sticker-template {
-  display: none;
-}
-.sticker {
-  position: relative;
-  .sticker-img {
-    width: 150px;
-    height: 150px;
+  .sticker-area {
+    height: auto;
+    max-height: 600px;
+    overflow-y: auto;
   }
-  .title {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    font-weight: bold;
-  }
-  .sticker-remove {
-    position: absolute;
-    right: 0;
-    cursor: pointer;
-    display: none;
-  }
-  &:hover {
-    .sticker-remove {
+  .sticker {
+    position: relative;
+    width: 170px;
+    margin: 20px 0;
+    padding: 10px;
+    padding-bottom: 5px;
+    border: 2px solid #c5c5c5;
+    margin: 20px 0;
+    border-radius: 4px;
+    .sticker-img {
+      width: 150px;
+      height: 150px;
+    }
+    .title {
       display: block;
+      margin: 0 auto;
+      text-align: center;
+      font-weight: bold;
+      border-top: 1px solid #ddd;
+      margin-top: 10px;
+      padding-top: 5px;
+    }
+    .sticker-remove {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+      display: none;
+      color: #B50000;
+      font-size: 20px;
+    }
+    &:hover {
+      .sticker-remove {
+        display: block;
+      }
     }
   }
 }
@@ -127,24 +140,37 @@ input[type="file"].photo-upload, input[type="file"].sticker-upload {
   position: fixed;
   width:100%;
   height:100%;
-  background: rgba(50,50,50,0.6);
+  background: rgba(50,50,50,0.7);
   z-index:200;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   cursor: pointer;
+  .modal-dialog {
+    width: 600px;
+    margin: 0 auto;
+    opacity: 1;
+    top: 10%;
+    cursor: default;
+    color: #000;
+    .form-group {
+      min-height: 45px;
+      .form-name {
+        width: 250px;
+      }
+      .sticker-name-cont {
+        display: none;
+      }
+      .error-name, .error-file {
+        display: none;
+        font-size: 12px;
+      }
+    }
+    
+  }
 }
-.modal-body {
-  margin: 0 auto;
-  width: 500px;
-  height: 200px;
-  opacity: 1;
-  background: #ffffff;
-  border: 1px solid #333;
-  top: 10%;
-  cursor: default;
-}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
@@ -162,10 +188,5 @@ input[type="file"].photo-upload, input[type="file"].sticker-upload {
   /* Space out the masthead */
   .header {
     margin-bottom: 30px;
-  }
-
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
   }
 }
